--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -1,67 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xrxFy4QxgH2rjgjMtCCo0i5ZR2jw0JvVglgk4W4Rj0X9JeCY7fp1LZb5YIecYfBU+7MJ6d2wovHJNECXt9OUGg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-xo4C4xQ4GcEQeKeTksLBVnpbh5V2pPlE9LfsJ9mWx/dt2Xueg9S2zPGmlf8tgxG+D5d2QkmZNw6wu1C1lzgLXQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script></head>
 </head>
-
 <body>
 
-   <div class="container-fluid">  
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
           <a class="navbar-brand" href="#">Jiwon Jang</a>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">portfolio</a>
-            </li>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Portfolio</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
         </div>
-      </div>
-    </nav>
-  
+      </nav>
+    </div>
   </div>
 </nav>
 
-<div class="container">
+<div class="flex-container">
   <div class="row">
    
     <div class="col-6">
       <img src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg" alt="I can't use my photo" class="img-fluid">
       <h2>Contact me</h2>
-      <div class="box">
-        <a href="https://www.instagram.com/bbbooingjiwon_o3o/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:u1493785@utah.edu" target="_blank"><i class="fas fa-envelope"></i></a>
-      </div>
+      <div class="icons-box">
+        <a href="https://www.instagram.com/bbbooingjiwon_o3o/" target="_blank"><i class="fab fa-instagram fa-3x" style="color: #E1306C;" icon-margin></i></a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #0077B5;" ></i></a>
+        <a href="mailto:u1493785@utah.edu" target="_blank"><i class="fas fa-envelope fa-3x" style="color: #D44638;" "icon-margin"></i></a>
+    </div>
     </div>
     
     <div class="col-6">
       <div class="d-grid gap-2 col-6 mx-auto">
 
-        <button class="learn-more">Bio</button>
-        <button class="learn-more">Educational background</button>
-        <button class="learn-more">Projects</button>
+        <div class="button-container"><button class="learn-more">Bio</button>
+          <div class="button-container"><button class="learn-more">Educational background</button>
+            <div class="button-container"><button class="learn-more">Projects</button>
 
   </div>
   </div>
