--- a/portfolio/educational background.html
+++ b/portfolio/educational background.html
@@ -14,3 +14,25 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script></head>
 </head>
 <body>
+
+ <h1>"Let's get to know me"</h1> 
+ <div>
+  <div class="container">
+
+ 
+  <h2>Educational background</h2>
+  <h3>SEOUL THEOLOGICAL UNIVERSITY</h3>
+  <h4>BACHELOR OF CHILDREN EDUCATION,</h4>
+  <p>2018 - 2022</p>
+  <div>
+  <h3>UNIVERSITY OF UTAH</h3>
+  <h4>MASTER OF INSTRUCTIONAL DESIGN AND EDUCATIONAL TECHNOLOGY,</h4>
+  <p>2023- present</p>
+
+  As an information nerd and passionate learner, I am excited to be studying Instructional Design and Educational Technology at the University of Utah.
+   
+  My experience and education in this field has taught me creating engaging and interactive learning experiences is the key. By using emerging technologies and trends, I am able to create learning environments that are both fun and interactive.  
+   
+  I am confident that I have the expertise to develop the learning experiences wherever education needs.
+ </div>
+</body>
