--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -58,9 +58,9 @@
     <div class="col-6">
       <div class="d-grid gap-2 col-6 mx-auto">
 
-        <div class="button-container"><button class="learn-more">Bio</button>
-          <div class="button-container"><button class="learn-more">Educational background</button>
-            <div class="button-container"><button class="learn-more">Projects</button>
+        <div class="button-container"><a href="bio page.html"><button class="learn-more">Bio</button></a>
+          <div class="button-container"><a href="educational background.html"><button class="learn-more">Educational background</button></a>
+            <div class="button-container"><a href="projectspage.html"><button class="learn-more">Projects</button></a>
 
   </div>
   </div>
