--- a/portfolio/educational background.html
+++ b/portfolio/educational background.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="educational background.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-xrxFy4QxgH2rjgjMtCCo0i5ZR2jw0JvVglgk4W4Rj0X9JeCY7fp1LZb5YIecYfBU+7MJ6d2wovHJNECXt9OUGg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-xo4C4xQ4GcEQeKeTksLBVnpbh5V2pPlE9LfsJ9mWx/dt2Xueg9S2zPGmlf8tgxG+D5d2QkmZNw6wu1C1lzgLXQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -15,24 +15,65 @@
 </head>
 <body>
 
+  <div class="introduction">
  <h1>"Let's get to know me"</h1> 
- <div>
-  <div class="container">
+ </div>
 
- 
+ <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Jiwon Jang</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+</div>
+</div>
+</nav>
+
+  
+    <div class="educational background">
   <h2>Educational background</h2>
+</div>
+
+<div class="undergrad">
+<div class="university">
   <h3>SEOUL THEOLOGICAL UNIVERSITY</h3>
-  <h4>BACHELOR OF CHILDREN EDUCATION,</h4>
+</div>
+  <h4>BACHELOR OF CHILDREN EDUCATION</h4>
   <p>2018 - 2022</p>
-  <div>
+  </div>
+
+  <div class="master">
+  <div class="university">
   <h3>UNIVERSITY OF UTAH</h3>
-  <h4>MASTER OF INSTRUCTIONAL DESIGN AND EDUCATIONAL TECHNOLOGY,</h4>
+</div>
+
+  <h4>MASTER OF INSTRUCTIONAL DESIGN AND EDUCATIONAL TECHNOLOGY</h4>
   <p>2023- present</p>
+
+</div>
+<div class="description">
 
   As an information nerd and passionate learner, I am excited to be studying Instructional Design and Educational Technology at the University of Utah.
    
   My experience and education in this field has taught me creating engaging and interactive learning experiences is the key. By using emerging technologies and trends, I am able to create learning environments that are both fun and interactive.  
    
   I am confident that I have the expertise to develop the learning experiences wherever education needs.
- </div>
+ </div></div>
 </body>
