--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -44,15 +44,17 @@
 
 <div class="flex-container">
   <div class="row">
-   
+  
     <div class="col-6">
-      <img src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg" alt="I can't use my photo" class="img-fluid">
-      <h2>Contact me</h2>
+
+    <div class="contactme">
+      <img src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg" alt="I can't use my photo" class="img-fluid" class="shadow-top-bottom-right">
       <div class="icons-box">
+        <h2>Contact me</h2>
         <a href="https://www.instagram.com/bbbooingjiwon_o3o/" target="_blank"><i class="fab fa-instagram fa-3x" style="color: #E1306C;" icon-margin></i></a>
         <a href="#" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #0077B5;" ></i></a>
         <a href="mailto:u1493785@utah.edu" target="_blank"><i class="fas fa-envelope fa-3x" style="color: #D44638;" "icon-margin"></i></a>
-    </div>
+    </div></div>
     </div>
     
     <div class="col-6">
