--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -12,11 +12,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script></head>
+<script src="index.js"></script>
 </head>
 <body>
+ 
 
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      
+        <nav class="navbar navbar-expand-lg navbar-transparent">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Jiwon Jang</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,15 +31,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="educational background.html">about me</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
           </div>
         </div>
+      </nav>
       </nav>
     </div>
   </div>
@@ -48,6 +49,11 @@
     <div class="col-6">
 
     <div class="contactme">
+      <div class="speech-bubble">
+        <h1>Hi guys!</h1>
+        <h2>Enjoy your Summer break</h2>
+      </div>
+
       <img src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg" alt="I can't use my photo" class="img-fluid" class="shadow-top-bottom-right">
       <div class="icons-box">
         <h2>Contact me</h2>
